# vpglib

./: .gitignore  CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/Tests/test_Freq/: main.cpp  test_Freq.pro
Examples/hrvanalyser/: CMakeLists.txt  hrvanalyser.pro  main.cpp
Examples/test_File/: main.cpp  test_File.pro
Examples/test_Freq/: main.cpp  test_Freq.pro
Examples/vpglight/: CMakeLists.txt  main.cpp  vpglight.pro
Examples/vpgtracker/: dlib.pri  facetracker.cpp  facetracker.h  main.cpp  vpgtracker.pro
Examples/vpgtracker/Arrows/: Arrows.pro  Task.arrows  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qarrowwidget.cpp  qarrowwidget.h
Examples/vpgtracker/GUIResmanager/: GUIResmanager.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsurveywebposter.cpp  qsurveywebposter.h
Examples/vpgtracker/Scripts/: fftwaterfall.m  process_vpgtracker_data.m
Examples/vpgwss/VPGServer/: facetracker.cpp  facetracker.h  qfacetracker.cpp  qfacetracker.h  qvideolocker.cpp  qvideolocker.h  qvideosource.cpp  qvideosource.h  qvpgprocessor.cpp  qvpgprocessor.h  qvpgserver.cpp  qvpgserver.h  vpgserver.pri
Examples/vpgwss/VPGService/: VPGService.iss  VPGService.pro  afterinstall.md  delservice.bat  main.cpp  regservice.bat  vpgservice.cpp  vpgservice.h
Examples/vpgwss/qtservice/src/: qtservice_win.cpp
Shared/: dlib.pri  opencv.pri  openmp.pri  vpglib.pri
lib/: exportvpg.pri  opencl.pri  opencv.pri  openmp.pri  vpg.cpp  vpg.h  vpglib.pro
test_Device/: main.cpp  test_Device.pro
test_File/: main.cpp  test_File.pro
test_Freq/: main.cpp
